<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@mipmap/welcome_bg"
    tools:context=".welcome.WelcomeActivity">


    <TextView
        android:id="@+id/tv_desc_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:text="@string/welcome_desc_big"
        android:layout_marginBottom="198dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_desc_small"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:layout_marginTop="2dp"
        android:text="@string/welcome_desc_small"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc_big"
        app:layout_constraintStart_toStartOf="@+id/tv_desc_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/get_started"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc_small"
        app:layout_constraintStart_toStartOf="@+id/tv_desc_big"
        app:layout_constraintEnd_toEndOf="@+id/tv_desc_big"
        android:layout_marginTop="71dp"
        android:text="@string/welcome_entry"
        style="@style/GradientButton"
        android:textColor="@color/color_0b0bd8"
        android:layout_width="0dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>