<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    android:background="@drawable/common_blue_top_bg"
    tools:context=".storagetype.SelectStorageTypeActivity">

    <TextView
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/title_tv"
        android:text="@string/secure_fragments"
        android:textSize="28sp"
        android:textColor="@color/color_ff1f2021"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/secure_fragments_desc"
        android:id="@+id/desc_tv"
        android:layout_marginTop="12dp"
        android:textSize="13sp"
        android:textColor="@color/color_ff616366"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="48dp"
        android:id="@+id/hardware_wallet"
        style="@style/select_storage_type_item"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/desc_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            style="@style/select_storage_type_item_desc"
            android:id="@+id/hardware_wallet_desc"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/hardware_wallet_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/hardware_wallet_iv"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/hardware_wallet_iv"
            android:src="@mipmap/hardware_wallet_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="15dp"
        android:id="@+id/share_wallet"
        style="@style/select_storage_type_item"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/hardware_wallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            style="@style/select_storage_type_item_desc"
            android:id="@+id/share_wallet_desc"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/share_wallet_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/share_wallet_iv"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/share_wallet_iv"
            android:src="@mipmap/share_wallet_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

