<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="@drawable/common_blue_top_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".device.PairingSuccessfulActivity">

    <include layout="@layout/common_title_layout"
        android:id="@+id/common_title_layout"/>

    <ImageView
        android:id="@+id/success_icon"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/common_title_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@mipmap/success"
        android:layout_width="80dp"
        android:layout_height="80dp"/>

    <TextView
        android:id="@+id/success_desc"
        app:layout_constraintTop_toBottomOf="@+id/success_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/used_with_safee_app"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/success_desc_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/success_desc"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/used_with_safee_app"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textColor="@color/color_ff0b0bd8"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/goto_to_wallet"
        app:layout_constraintTop_toBottomOf="@+id/success_desc_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="71dp"
        android:text="@string/goto_to_wallet"
        style="@style/CommonBlueButton"
        android:clickable="true"
        android:layout_width="0dp"
        android:textSize="15sp"
        android:layout_marginHorizontal="@dimen/marginLeft"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/goto_to_trans_record"
        app:layout_constraintTop_toBottomOf="@+id/goto_to_wallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/view_the_record"
        style="@style/CommonWhiteButton"
        android:clickable="true"
        android:layout_width="0dp"
        android:textSize="15sp"
        android:layout_marginHorizontal="@dimen/marginLeft"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>