<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:fitsSystemWindows="true"
android:background="@drawable/common_blue_top_bg"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".wallet.view.TransActivity">

<include layout="@layout/common_title_layout"
    android:id="@+id/common_title_layout"/>

<ScrollView
    app:layout_constraintTop_toBottomOf="@+id/common_title_layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/ransfer_confirm"
    android:id="@+id/content_scrollview"
    android:layout_width="match_parent"
    android:layout_height="0dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="10dp"
                android:id="@+id/device_list_item_2"
                style="@style/device_list_item"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    style="@style/device_list_item_text_1"
                    android:id="@+id/item_no2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="1."
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="HardcodedText" />
                <TextView
                    style="@style/device_list_item_text_1"
                    android:id="@+id/item_no2_name"
                    android:layout_marginStart="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/item_no2"
                    android:text="@string/trans_item_1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_marginTop="5dp"
                    style="@style/device_list_item_text_2"
                    android:visibility="gone"
                    android:id="@+id/item_no2_desc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/item_no2_name"
                    android:text="@string/device_list_desc_no2_2"
                    app:layout_constraintTop_toBottomOf="@+id/item_no2_name" />

                <Spinner
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/item_no2_desc"
                    app:layout_constraintTop_toBottomOf="@+id/item_no2_desc"
                    android:id="@+id/spinner"
                    android:spinnerMode="dropdown"
                    android:background="@drawable/bt_spinner_bg"
                    android:layout_width="match_parent"
                    android:dropDownVerticalOffset="60dp"
                    android:dropDownWidth="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="10dp"
                android:id="@+id/device_list_item_3"
                style="@style/device_list_item"
                app:layout_constraintTop_toBottomOf="@+id/device_list_item_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    style="@style/device_list_item_text_1"
                    android:id="@+id/item_no3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="2."
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="HardcodedText" />
                <TextView
                    style="@style/device_list_item_text_1"
                    android:id="@+id/item_no3_name"
                    android:layout_marginStart="2dp"
                    app:layout_constraintStart_toEndOf="@+id/item_no3"
                    android:text="@string/trans_item_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    app:layout_constraintTop_toBottomOf="@+id/item_no3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="0dp"
                    android:id="@+id/view_line"
                    android:layout_marginTop="15dp"
                    android:background="@color/color_line"
                    android:layout_height="0.5dp"/>

                <!-- Receiver -->
                <TextView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_line"
                    android:text="@string/to_text"
                    android:layout_marginTop="15dp"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:id="@+id/receiver_tv"
                    android:textSize="16sp"
                    android:textColor="@color/color_ff616366"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/receiver_tv"
                    app:layout_constraintStart_toEndOf="@+id/receiver_tv"
                    tools:text="ghyg7687987fadh6788768888977898dbzhb89ghyg7687987fadh6788768888977898dbzhb89"
                    android:textAllCaps="false"
                    android:gravity="end"
                    android:id="@+id/receiver_address_tv"
                    android:layout_marginStart="40dp"
                    android:textSize="14sp"
                    android:textColor="@color/color_ff1f2021"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>


                <!-- Amount -->
                <TextView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/receiver_address_tv"
                    android:text="@string/amount_label"
                    android:layout_marginTop="15dp"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:id="@+id/amount_tv"
                    android:textSize="16sp"
                    android:textColor="@color/color_ff616366"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/amount_tv"
                    app:layout_constraintStart_toEndOf="@+id/amount_tv"
                    tools:text="0.001124 BTC"
                    android:textAllCaps="false"
                    android:gravity="end"
                    android:id="@+id/amount_val_tv"
                    android:layout_marginStart="40dp"
                    android:textSize="14sp"
                    android:textColor="@color/color_ff1f2021"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <!-- Fee -->
                <TextView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/amount_tv"
                    android:text="@string/network_fee"
                    android:layout_marginTop="15dp"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:id="@+id/fee_tv"
                    android:textSize="16sp"
                    android:textColor="@color/color_ff616366"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/fee_tv"
                    app:layout_constraintStart_toEndOf="@+id/fee_tv"
                    tools:text="0.001124 BTC"
                    android:textAllCaps="false"
                    android:gravity="end"
                    android:id="@+id/network_val_tv"
                    android:layout_marginStart="40dp"
                    android:textSize="14sp"
                    android:textColor="@color/color_ff1f2021"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <!-- Total -->
                <TextView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fee_tv"
                    android:text="@string/total_to_transfer"
                    android:layout_marginTop="15dp"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:id="@+id/total_tv"
                    android:textSize="16sp"
                    android:textColor="@color/color_ff616366"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/total_tv"
                    app:layout_constraintStart_toEndOf="@+id/total_tv"
                    tools:text="0.001124 BTC"
                    android:textAllCaps="false"
                    android:gravity="end"
                    android:id="@+id/total_val_tv"
                    android:layout_marginStart="40dp"
                    android:textSize="14sp"
                    android:textColor="@color/color_ff1f2021"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>

<TextView
    android:id="@+id/ransfer_confirm"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="71dp"
    android:text="@string/ransfer_confirm"
    style="@style/CommonBlueButton"
    android:clickable="true"
    android:layout_width="0dp"
    android:textSize="15sp"
    android:layout_marginHorizontal="@dimen/marginLeft"
    android:layout_marginBottom="20dp"
    android:enabled="false"
    android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>